Fix letter spacing for post titles in blog and archives

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ ol li:before {
 	color: inherit;
 	background-color: transparent;
 	font-family: inherit;
+	letter-spacing: inherit;
 }
 .posts li a:hover {
 	border-color: black;
